tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__enum_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/enum-2.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "i", align 4
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %6 = const 1 : s32i
        store %6, %1, align 4
        for cond: {
            %13 = load %1 : s32i, align 4
            %14 = const 0 : s32i
            %15 = cmp ge %13, %14 : bool
            condition %15
        } step: {
            %7 = load %1 : s32i, align 4
            %8 = dec %7 : s32i [nsw]
            store %8, %1, align 4
            yield
        } do {
            scope {
                %9 = load %1 : s32i, align 4
                %10 = const -1 : s32i
                %11 = cmp eq %9, %10 : bool
                if %11 {
                    %12 = get_global @abort : (() -> void)*
                    call @abort() [all]
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %3 = get_global @exit : ((s32i) -> void)*
    %4 = const 0 : s32i
    call @exit(%4) [all]
    %5 = load %0 : s32i
    return %5
}
