tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__ffs_2.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/ffs-2.c" (c, x86_64-unknown-linux-gnu)
global ffstesttab : rec_anon2E0[8] = [{-2147483648, 32}, {-1515870811, 1}, {1515870810, 2}, {-889323520, 18}, {32768, 16}, {42405, 1}, {23130, 2}, {3232, 6}] [external, default, align 16, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "i", align 4
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %6 = const 0 : s32i
        store %6, %1, align 4
        for cond: {
            %24 = load %1 : s32i, align 4
            %25 = cast(integral) %24 : u64i
            %26 = const 64 : u64i
            %27 = const 8 : u64i
            %28 = div %26, %27 : u64i
            %29 = cmp lt %25, %28 : bool
            condition %29
        } step: {
            %7 = load %1 : s32i, align 4
            %8 = inc %7 : s32i [nsw]
            store %8, %1, align 4
            yield
        } do {
            scope {
                scope {
                    %9 = load %1 : s32i, align 4
                    %10 = cast(integral) %9 : s64i
                    %11 = get_global @ffstesttab : rec_anon2E0[8]*
                    %12 = get_element %11[%10] : rec_anon2E0*
                    %13 = get_member %12[0] "input" : s32i*
                    %14 = load %13 : s32i, align 8
                    %15 = ffs %14 : s32i
                    %16 = load %1 : s32i, align 4
                    %17 = cast(integral) %16 : s64i
                    %18 = get_global @ffstesttab : rec_anon2E0[8]*
                    %19 = get_element %18[%17] : rec_anon2E0*
                    %20 = get_member %19[1] "output" : s32i*
                    %21 = load %20 : s32i, align 4
                    %22 = cmp ne %15, %21 : bool
                    if %22 {
                        %23 = get_global @abort : (() -> void)*
                        call @abort() [all]
                        yield
                    }
                    yield
                }
                yield
            }
            yield
        }
        yield
    }
    %3 = get_global @exit : ((s32i) -> void)*
    %4 = const 0 : s32i
    call @exit(%4) [all]
    %5 = load %0 : s32i
    return %5
}
