tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__float_floor.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/float-floor.c" (c, x86_64-unknown-linux-gnu)
global d : double = 1023.9999694824219 [external, default, align 8, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca double, "df", align 8
    %2 = alloca float, "f1", align 4
    %3 = const 0 : s32i
    store %3, %0
    %4 = get_global @d : double*
    %5 = load %4 : double, align 8
    <unmodeled: cir.floor>
    store %6, %1, align 8
    %7 = get_global @d : double*
    %8 = load %7 : double, align 8
    <unmodeled: cir.floor>
    %10 = cast(floating) %9 : float
    store %10, %2, align 4
    scope {
        %13 = load %1 : double, align 8
        %14 = cast(float_to_int) %13 : s32i
        %15 = const 1023 : s32i
        %16 = cmp ne %14, %15 : bool
        %17 = ternary %16 ? { : bool
            %23 = const #true : bool
            yield %23
        } : {
            %19 = load %2 : float, align 4
            %20 = cast(float_to_int) %19 : s32i
            %21 = const 1023 : s32i
            %22 = cmp ne %20, %21 : bool
            yield %22
        }
        if %17 {
            %18 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %11 = const 0 : s32i
    store %11, %0
    %12 = load %0 : s32i
    return %12
}
