tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__floatunsisf_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/floatunsisf-1.c" (c, x86_64-unknown-linux-gnu)
global u : u32i = 2147483777 [external, default, align 4, dso_local]
global f1 : float = 0.000000e+00 [external, default, align 4, dso_local]
global f2 : float = 0.000000e+00 [external, default, align 4, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @u : u32i*
    %3 = load %2 : u32i, align 4, volatile
    %4 = cast(int_to_float) %3 : float
    %5 = get_global @f1 : float*
    store %4, %5, align 4, volatile
    %6 = const 2147483777 : u32i
    %7 = cast(int_to_float) %6 : float
    %8 = get_global @f2 : float*
    store %7, %8, align 4, volatile
    scope {
        %12 = get_global @f1 : float*
        %13 = load %12 : float, align 4, volatile
        %14 = get_global @f2 : float*
        %15 = load %14 : float, align 4, volatile
        %16 = cmp ne %13, %15 : bool
        if %16 {
            %17 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %9 = get_global @exit : ((s32i) -> void)*
    %10 = const 0 : s32i
    call @exit(%10) [all]
    %11 = load %0 : s32i
    return %11
}
