tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__fprintf_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/fprintf-1.c" (c, x86_64-unknown-linux-gnu)
global stdout : rec__IO_FILE* [external, default, align 8, dso_local]
global .str : s8i[6] = "hello" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[7] = "hello\n" [cir_private, default, align 1, dso_local, constant]
global .str.2 : s8i[2] = "a" [cir_private, default, align 1, dso_local, constant]
global .str.3 : s8i[1] = zero [cir_private, default, align 1, dso_local, constant]
global .str.4 : s8i[3] = "%s" [cir_private, default, align 1, dso_local, constant]
global .str.5 : s8i[3] = "%c" [cir_private, default, align 1, dso_local, constant]
global .str.6 : s8i[4] = "%s\n" [cir_private, default, align 1, dso_local, constant]
global .str.7 : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn fprintf(%arg0: rec__IO_FILE*, %arg1: s8i*, ...) -> s32i [external, c, nothrow];
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %3 = get_global @stdout : rec__IO_FILE**
    %4 = load %3 : rec__IO_FILE*, align 8
    %5 = get_global @.str : s8i[6]*
    %6 = cast(array_to_ptrdecay) %5 : s8i*
    %7 = call @fprintf(%4, %6) : s32i [all]
    scope {
        %184 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %185 = get_global @stdout : rec__IO_FILE**
        %186 = load %185 : rec__IO_FILE*, align 8
        %187 = get_global @.str : s8i[6]*
        %188 = cast(array_to_ptrdecay) %187 : s8i*
        %189 = call @fprintf(%186, %188) : s32i [all]
        %190 = const 5 : s32i
        %191 = cmp ne %189, %190 : bool
        if %191 {
            %192 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %8 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %9 = get_global @stdout : rec__IO_FILE**
    %10 = load %9 : rec__IO_FILE*, align 8
    %11 = get_global @.str.1 : s8i[7]*
    %12 = cast(array_to_ptrdecay) %11 : s8i*
    %13 = call @fprintf(%10, %12) : s32i [all]
    scope {
        %175 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %176 = get_global @stdout : rec__IO_FILE**
        %177 = load %176 : rec__IO_FILE*, align 8
        %178 = get_global @.str.1 : s8i[7]*
        %179 = cast(array_to_ptrdecay) %178 : s8i*
        %180 = call @fprintf(%177, %179) : s32i [all]
        %181 = const 6 : s32i
        %182 = cmp ne %180, %181 : bool
        if %182 {
            %183 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %14 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %15 = get_global @stdout : rec__IO_FILE**
    %16 = load %15 : rec__IO_FILE*, align 8
    %17 = get_global @.str.2 : s8i[2]*
    %18 = cast(array_to_ptrdecay) %17 : s8i*
    %19 = call @fprintf(%16, %18) : s32i [all]
    scope {
        %166 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %167 = get_global @stdout : rec__IO_FILE**
        %168 = load %167 : rec__IO_FILE*, align 8
        %169 = get_global @.str.2 : s8i[2]*
        %170 = cast(array_to_ptrdecay) %169 : s8i*
        %171 = call @fprintf(%168, %170) : s32i [all]
        %172 = const 1 : s32i
        %173 = cmp ne %171, %172 : bool
        if %173 {
            %174 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %20 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %21 = get_global @stdout : rec__IO_FILE**
    %22 = load %21 : rec__IO_FILE*, align 8
    %23 = get_global @.str.3 : s8i[1]*
    %24 = cast(array_to_ptrdecay) %23 : s8i*
    %25 = call @fprintf(%22, %24) : s32i [all]
    scope {
        %157 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %158 = get_global @stdout : rec__IO_FILE**
        %159 = load %158 : rec__IO_FILE*, align 8
        %160 = get_global @.str.3 : s8i[1]*
        %161 = cast(array_to_ptrdecay) %160 : s8i*
        %162 = call @fprintf(%159, %161) : s32i [all]
        %163 = const 0 : s32i
        %164 = cmp ne %162, %163 : bool
        if %164 {
            %165 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %26 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %27 = get_global @stdout : rec__IO_FILE**
    %28 = load %27 : rec__IO_FILE*, align 8
    %29 = get_global @.str.4 : s8i[3]*
    %30 = cast(array_to_ptrdecay) %29 : s8i*
    %31 = get_global @.str : s8i[6]*
    %32 = cast(array_to_ptrdecay) %31 : s8i*
    %33 = call @fprintf(%28, %30, %32) : s32i [all]
    scope {
        %146 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %147 = get_global @stdout : rec__IO_FILE**
        %148 = load %147 : rec__IO_FILE*, align 8
        %149 = get_global @.str.4 : s8i[3]*
        %150 = cast(array_to_ptrdecay) %149 : s8i*
        %151 = get_global @.str : s8i[6]*
        %152 = cast(array_to_ptrdecay) %151 : s8i*
        %153 = call @fprintf(%148, %150, %152) : s32i [all]
        %154 = const 5 : s32i
        %155 = cmp ne %153, %154 : bool
        if %155 {
            %156 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %34 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %35 = get_global @stdout : rec__IO_FILE**
    %36 = load %35 : rec__IO_FILE*, align 8
    %37 = get_global @.str.4 : s8i[3]*
    %38 = cast(array_to_ptrdecay) %37 : s8i*
    %39 = get_global @.str.1 : s8i[7]*
    %40 = cast(array_to_ptrdecay) %39 : s8i*
    %41 = call @fprintf(%36, %38, %40) : s32i [all]
    scope {
        %135 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %136 = get_global @stdout : rec__IO_FILE**
        %137 = load %136 : rec__IO_FILE*, align 8
        %138 = get_global @.str.4 : s8i[3]*
        %139 = cast(array_to_ptrdecay) %138 : s8i*
        %140 = get_global @.str.1 : s8i[7]*
        %141 = cast(array_to_ptrdecay) %140 : s8i*
        %142 = call @fprintf(%137, %139, %141) : s32i [all]
        %143 = const 6 : s32i
        %144 = cmp ne %142, %143 : bool
        if %144 {
            %145 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %42 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %43 = get_global @stdout : rec__IO_FILE**
    %44 = load %43 : rec__IO_FILE*, align 8
    %45 = get_global @.str.4 : s8i[3]*
    %46 = cast(array_to_ptrdecay) %45 : s8i*
    %47 = get_global @.str.2 : s8i[2]*
    %48 = cast(array_to_ptrdecay) %47 : s8i*
    %49 = call @fprintf(%44, %46, %48) : s32i [all]
    scope {
        %124 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %125 = get_global @stdout : rec__IO_FILE**
        %126 = load %125 : rec__IO_FILE*, align 8
        %127 = get_global @.str.4 : s8i[3]*
        %128 = cast(array_to_ptrdecay) %127 : s8i*
        %129 = get_global @.str.2 : s8i[2]*
        %130 = cast(array_to_ptrdecay) %129 : s8i*
        %131 = call @fprintf(%126, %128, %130) : s32i [all]
        %132 = const 1 : s32i
        %133 = cmp ne %131, %132 : bool
        if %133 {
            %134 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %50 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %51 = get_global @stdout : rec__IO_FILE**
    %52 = load %51 : rec__IO_FILE*, align 8
    %53 = get_global @.str.4 : s8i[3]*
    %54 = cast(array_to_ptrdecay) %53 : s8i*
    %55 = get_global @.str.3 : s8i[1]*
    %56 = cast(array_to_ptrdecay) %55 : s8i*
    %57 = call @fprintf(%52, %54, %56) : s32i [all]
    scope {
        %113 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %114 = get_global @stdout : rec__IO_FILE**
        %115 = load %114 : rec__IO_FILE*, align 8
        %116 = get_global @.str.4 : s8i[3]*
        %117 = cast(array_to_ptrdecay) %116 : s8i*
        %118 = get_global @.str.3 : s8i[1]*
        %119 = cast(array_to_ptrdecay) %118 : s8i*
        %120 = call @fprintf(%115, %117, %119) : s32i [all]
        %121 = const 0 : s32i
        %122 = cmp ne %120, %121 : bool
        if %122 {
            %123 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %58 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %59 = get_global @stdout : rec__IO_FILE**
    %60 = load %59 : rec__IO_FILE*, align 8
    %61 = get_global @.str.5 : s8i[3]*
    %62 = cast(array_to_ptrdecay) %61 : s8i*
    %63 = const 120 : s32i
    %64 = call @fprintf(%60, %62, %63) : s32i [all]
    scope {
        %103 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %104 = get_global @stdout : rec__IO_FILE**
        %105 = load %104 : rec__IO_FILE*, align 8
        %106 = get_global @.str.5 : s8i[3]*
        %107 = cast(array_to_ptrdecay) %106 : s8i*
        %108 = const 120 : s32i
        %109 = call @fprintf(%105, %107, %108) : s32i [all]
        %110 = const 1 : s32i
        %111 = cmp ne %109, %110 : bool
        if %111 {
            %112 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %65 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %66 = get_global @stdout : rec__IO_FILE**
    %67 = load %66 : rec__IO_FILE*, align 8
    %68 = get_global @.str.6 : s8i[4]*
    %69 = cast(array_to_ptrdecay) %68 : s8i*
    %70 = get_global @.str.1 : s8i[7]*
    %71 = cast(array_to_ptrdecay) %70 : s8i*
    %72 = call @fprintf(%67, %69, %71) : s32i [all]
    scope {
        %92 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %93 = get_global @stdout : rec__IO_FILE**
        %94 = load %93 : rec__IO_FILE*, align 8
        %95 = get_global @.str.6 : s8i[4]*
        %96 = cast(array_to_ptrdecay) %95 : s8i*
        %97 = get_global @.str.1 : s8i[7]*
        %98 = cast(array_to_ptrdecay) %97 : s8i*
        %99 = call @fprintf(%94, %96, %98) : s32i [all]
        %100 = const 7 : s32i
        %101 = cmp ne %99, %100 : bool
        if %101 {
            %102 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %73 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
    %74 = get_global @stdout : rec__IO_FILE**
    %75 = load %74 : rec__IO_FILE*, align 8
    %76 = get_global @.str.7 : s8i[4]*
    %77 = cast(array_to_ptrdecay) %76 : s8i*
    %78 = const 0 : s32i
    %79 = call @fprintf(%75, %77, %78) : s32i [all]
    scope {
        %82 = get_global @fprintf : ((rec__IO_FILE*, s8i*, ...) -> s32i)*
        %83 = get_global @stdout : rec__IO_FILE**
        %84 = load %83 : rec__IO_FILE*, align 8
        %85 = get_global @.str.7 : s8i[4]*
        %86 = cast(array_to_ptrdecay) %85 : s8i*
        %87 = const 0 : s32i
        %88 = call @fprintf(%84, %86, %87) : s32i [all]
        %89 = const 2 : s32i
        %90 = cmp ne %88, %89 : bool
        if %90 {
            %91 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %80 = const 0 : s32i
    store %80, %0
    %81 = load %0 : s32i
    return %81
}
